[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nmap-analyzer"
version = "2.1.0"
authors = [
    { name = "Rashid", email = "rashid@csec.local" }
]
description = "Parses Nmap results, identifies vulnerabilities, ranks by criticality, maps MITRE ATT&CK, and builds roadmaps."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Security",
]
dependencies = [
    "colorama>=0.4.6",
    "tabulate>=0.9.0",
    "weasyprint>=62.0; platform_system!='Windows'",
]

[project.scripts]
nmap-analyzer = "nmap_analyzer.cli:main"
